--- a/Landing page.html
+++ b/Landing page.html
@@ -19,6 +19,8 @@
         </div>
     </nav>
 </header>
+
+
 <body>
     <section id="1">
         <h2>Elevate Your Palate With Authentic Turkish Flavours</h2>
@@ -138,32 +140,44 @@
         <img src="" alt="map">
     </section>
 </body>
+
+
 <!--Footer-->
-<footer id="fot">
-    <div class="sm">
-        <h3>SOCIAL MEDIA</h3> 
-        <img src="icons/icons_Facebook.png" alt="Facebook">
-        <img src="icons/icons_Twitter.png" alt="Twitter">
-        <img src="icons/icons_Instagram.png" alt="Instagram">
+<footer id="foot">
+
+    <!--Social Media Icons-->
+    <div class="socials">
+        <h3>Social Media</h3> 
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Facebook.png"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Twitter.png"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Instagram.png"></a>
+
     </div>
+
+    <!--Directory-->
     <div class="gtu">
-        <h3> GET TO US</h3>
-        <p>
-            <h4>Contact</h4>
-            +03 1234 1234 
-        </p>
-        <p>
-            <h4>Address</h4>
-            5/23 Barangaroo Ave Barangaroo NSW 2000
-        </p>
-        <p>
-            <h4>Email</h4>
-            bookings@anason.com.au
-        </p>
-        <p>
-            <h4>Opening Hours</h4>
-            Till 12pm Everyday
-        </p>
+
+        <h3>Get To Us</h3>
+            
+            <div>
+                <h4>Contact</h4>
+                <p>+03 1234 1234</p>
+            </div>
+
+            <div>
+                <h4>Address</h4>
+                <p>5/23 Barangaroo Ave Barangaroo NSW 2000</p>
+            </div>
+
+            <div>
+                <h4>Email</h4>
+                <p>bookings@anason.com.au</p>
+            </div>
+
+            <div>
+                <h4>Opening Hours</h4>
+                <p>Till 12pm Everyday</p>
+            </div>
     </div>
 </footer>
 </html>
