26th May - 3.48pm

--- a/index.html
+++ b/index.html
@@ -86,12 +86,15 @@
 <!--Philosophy-->
     <section id="landing-philosphy">
         <h2>Anason Philosophy</h2>
-        <p>When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum.</p>
 
+        <p>When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum.</p>
         <p>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
-    
-    <section id="landing-philosphy">
+    </section>
+
+<!--Recommendation-->
+    <section id="landing-recommendations">
         <h2>Recommendations</h2>
+
         <figure>
             <img class="landing-food" src="">
             <figcaption>
