26th may - 5.26pm

--- a/html/index.html
+++ b/html/index.html
@@ -10,22 +10,29 @@
 
 
 <header class="grid">
-    
+
     <!--navigation bar-->
     <nav class="navbar">
-        <div class="pages">
+
+        <!--pages-->
+        <div class="nav-pages">
             <a href="food.html">Food</a>
             <a href="drinks.html">Drinks</a>
             <a href="reserve.html">Reserve</a>
-            <a href="abouts.html">About</a>
+            <a href="about.html">About</a>
         </div>
+
+        <!--brand logo-->
         <div class="white-brandlogo">
-            <a href="index.html"></a><img src="icons_anason_white.png" alt="brand logo"></a>
+            <a href="index.html"><img src="icons/logo_anason_white.png" alt="brand logo"></a>
         </div>
+
+        <!--search icon-->
         <div class="white-searchicon">
-            <a href="search.html"><img src="icons_search_icon_white.png" alt="search icon"></a>
+            <a href="search.html"><img src="icons/icons_search icon_white.png" alt="search icon"></a>
         </div>
     </nav>
+
 </header>
 
 
