26th may - 5.33pm

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 
         <!--search icon-->
         <div class="white-searchicon">
-            <a href="search.html"><img src="icons/icons_search icon_white.png" alt="search icon"></a>
+            <a href="search.html"><img src="assets/icons/icons_search icon_white.png" alt="search icon"></a>
         </div>
     </nav>
 
