--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anason</title>
-    <link rel="stylesheet" type="text/html" href="fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
 
 
@@ -48,7 +48,7 @@
 <!--Specials-->
     <section id="landing-specials">
     
-        <img class="dynamic-logo" src="assets/icons/anason_fextival_white.png">
+        <img class="dynamic-logo" src="assets/icons/anason_festival_white.png">
         
         <h2>Mothers Day Specials</h2>
 
@@ -180,9 +180,9 @@
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
         <h3>Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons_Facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons_Twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons_Instagram.png" alt="instagram"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/instagram.png" alt="instagram"></a>
     </div>
 
     <!--Directory-->
