26th may - 7.08pm

--- a/food.html
+++ b/food.html
@@ -4,20 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food page</title>
+    <title>Anason</title>
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
-<header>
+
+
+<header class="grid">
+
     <!--navigation bar-->
-    <nav class="navigation">
-       <div>
-           <a href="Food page.html">Food</a>
-           <a href="Drinks page.html">Drinks</a>
-           <a href="Reserve page.html">Reserve</a>
-           <a href="Abouts page.html">About</a>
-           <a href="Landing page.html"><img src="icons/icons_ANASON_black.png"></a>
-           <a href="Search page.html"><img src="icons/icons_Search Icon_black.png"></a>
-       </div>
-   </nav>
+    <nav class="navbar">
+
+        <!--pages-->
+        <div>
+            <a class="nav-pages" href="food.html">Food</a>
+            <a class="nav-pages" href="drinks.html">Drinks</a>
+            <a class="nav-pages" href="reserve.html">Reserve</a>
+            <a class="nav-pages" href="about.html">About</a>
+        </div>
+
+        <!--brand logo-->
+        <div class="white-brandlogo">
+            <a href="index.html"><img src="assets/icons/anason_white.png" alt="brand logo"></a>
+        </div>
+
+        <!--search icon-->
+        <div class="white-searchicon">
+            <a href="search.html"><img src="assets/icons/search_icon_white.png" alt="search icon"></a>
+        </div>
+    </nav>
 </header>
 
 
