--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <nav class="navbar">
 
         <!--pages-->
-        <div class="nav-pages">
-            <a href="food.html">Food</a>
-            <a href="drinks.html">Drinks</a>
-            <a href="reserve.html">Reserve</a>
-            <a href="about.html">About</a>
+        <div>
+            <a class="nav-pages" href="food.html">Food</a>
+            <a class="nav-pages" href="drinks.html">Drinks</a>
+            <a class="nav-pages" href="reserve.html">Reserve</a>
+            <a class="nav-pages" href="about.html">About</a>
         </div>
 
         <!--brand logo-->
