26th may - 7.32pm

--- a/index.html
+++ b/index.html
@@ -190,22 +190,22 @@
         <h3>Get To Us</h3>
             <div>
                 <p class="footer-gtu-name">Contact</p>
-                <p class="footer-gtu.description">+02 9188 1581</p>
+                <p class="footer-gtu-description">+02 9188 1581</p>
             </div>
 
             <div>
                 <p class="footer-gtu-name">Address</p>
-                <p class="footer-gtu.description">5/23 Barangaroo Ave Barangaroo NSW 2000</p>
+                <p class="footer-gtu-description">5/23 Barangaroo Ave Barangaroo NSW 2000</p>
             </div>
 
             <div>
                 <p class="footer-gtu-name">Email</p>
-                <p class="footer-gtu.description">bookings@anason.com.au</p>
+                <p class="footer-gtu-description">bookings@anason.com.au</p>
             </div>
 
             <div>
                 <p class="footer-gtu-name">Opening Hours</p>
-                <p class="footer-gtu.description">Till 12pm Everyday</p>
+                <p class="footer-gtu-description">Till 12pm Everyday</p>
             </div>
     </div>
 </footer>
