--- a/result.html
+++ b/result.html
@@ -54,41 +54,38 @@
 </body>
 
 
- <!--Footer-->
-<footer id="foot">
+<!--Footer-->
+<footer class="footer">
 
     <!--Social Media Icons-->
-    <div class="socials">
+    <div class="footer-socials-icons">
         <h3>Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Facebook.png"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Twitter.png"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Instagram.png"></a>
-
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/instagram.png" alt="instagram"></a>
     </div>
 
     <!--Directory-->
-    <div class="gtu">
-
+    <div>
         <h3>Get To Us</h3>
-            
             <div>
-                <h4>Contact</h4>
-                <p>+03 1234 1234</p>
+                <p class="footer-gtu-name">Contact</p>
+                <p class="footer-gtu-description">+02 9188 1581</p>
             </div>
 
             <div>
-                <h4>Address</h4>
-                <p>5/23 Barangaroo Ave Barangaroo NSW 2000</p>
+                <p class="footer-gtu-name">Address</p>
+                <p class="footer-gtu-description">5/23 Barangaroo Ave Barangaroo NSW 2000</p>
             </div>
 
             <div>
-                <h4>Email</h4>
-                <p>bookings@anason.com.au</p>
+                <p class="footer-gtu-name">Email</p>
+                <p class="footer-gtu-description">bookings@anason.com.au</p>
             </div>
 
             <div>
-                <h4>Opening Hours</h4>
-                <p>Till 12pm Everyday</p>
+                <p class="footer-gtu-name">Opening Hours</p>
+                <p class="footer-gtu-description">Till 12pm Everyday</p>
             </div>
     </div>
 </footer>
