--- a/about.html
+++ b/about.html
@@ -37,31 +37,34 @@
 
 <body>
     <!--sub-navigation bar-->
-    <p class="subhead">About</p>
+    <p class="subhead">ABOUT</p>
 
     <h1>About Us</h1>
 
-    <div>
+    <div class="about-header">
+
     <p>Invoking the concept of the traditional restaurants and bars of Istanbul, the meyhanes&#46; True to its Turkish roots, the drinks menu of Sydney&#8217;s most popular meyhane is as important as the food&#46; Sample traditional Turkish Raki, sip your way through the wine regions of Turkey, or celebrate life with signature cocktails&#46;</P>
     <p>The venue&#8217;s design reflects the modern side of Istanbul with the typical Bosphorus Blue being prominent all around the restaurant. In typical meyhane style, Anason is open for drinks accompanied by mezes or for a full feast. Be our guest and let us take you on a journey to the Bosphorus to sample some of Turkey&#8217;s famous hospitality!</P>
 
-    <img src="Images/Landing_Main.jpg" alt="landing main" width="1222" height="602">
+    <img class="about-page-full-image" src="assets/other_images/about-01.jpg" alt="a table of food">
     </div>
 
 
     <!--Our Story-->
-    <div id="our story">
+    <div class="about-our-story">
         <h2>Our Story</h2>
 
         <p>Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
         <p>Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
 
-        <img src="Landing Page/Images/Landing_socials_01.jpg" alt="chef" width="602" height="602">
-        <img src="Images/Team.jpg" alt="team" width="602" height="602">
+        <img class="about-page-square-image" src="assets/other_images/about-02.jpg" alt="chef anason">
+        
+        <img class="about-page-square-image" src="assets/other_images/about-03.jpg" alt="team">
     </div>
 
+
     <!--Our Food-->
-    <div id="our food">
+    <div class="about-our-food">
         <h2>Our Food</h2>
 
         <P>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
@@ -70,47 +73,44 @@
 
 
     <!--Reserve Now Button-->
-    <div style="display: inline-block; transform: scale(0.25);">
-        <a href="Reserve page.html"><img src="buttons/buttons_Reserve now_blue.png" class="buttons"></a>
+    <div class="about-button">
+        <a class="reserve-button" href="reserve.html"><img src="assets/buttons/reserve_now_blue.png"></a>
     </div>
 </body>
 
 
 <!--Footer-->
-<footer id="foot">
+<footer class="footer">
 
     <!--Social Media Icons-->
-    <div class="socials">
+    <div class="footer-socials-icons">
         <h3>Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Facebook.png"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Twitter.png"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="icons/icons_Instagram.png"></a>
-
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/instagram.png" alt="instagram"></a>
     </div>
 
     <!--Directory-->
-    <div class="gtu">
-
+    <div>
         <h3>Get To Us</h3>
-            
             <div>
-                <h4>Contact</h4>
-                <p>+03 1234 1234</p>
+                <p class="footer-gtu-name">Contact</p>
+                <p class="footer-gtu-description">+02 9188 1581</p>
             </div>
 
             <div>
-                <h4>Address</h4>
-                <p>5/23 Barangaroo Ave Barangaroo NSW 2000</p>
+                <p class="footer-gtu-name">Address</p>
+                <p class="footer-gtu-description">5/23 Barangaroo Ave Barangaroo NSW 2000</p>
             </div>
 
             <div>
-                <h4>Email</h4>
-                <p>bookings@anason.com.au</p>
+                <p class="footer-gtu-name">Email</p>
+                <p class="footer-gtu-description">bookings@anason.com.au</p>
             </div>
 
             <div>
-                <h4>Opening Hours</h4>
-                <p>Till 12pm Everyday</p>
+                <p class="footer-gtu-name">Opening Hours</p>
+                <p class="footer-gtu-description">Till 12pm Everyday</p>
             </div>
     </div>
 </footer>
