--- a/drinks.html
+++ b/drinks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anason</title>
+    <title>Drinks Menu</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
 </head>
 
