26th may 7.55pm

--- a/food.html
+++ b/food.html
@@ -34,36 +34,36 @@
     </nav>
 </header>
 
-
 <body>
 
     <p class="subhead">MENU</p>
 
-    <h1>FOOD MENU</h1>
+    <h1>Food Menu</h1>
 
     <p>In a style true to its inspiration of Istanbul Meyhanes all dishes are designed to share. <br> 
-        We use flour, nuts and spices, although all care is taken, trace elements are unavoidable in all meals.
-        <img src="icons/icons_Filter.png" alt="Filter" id="filter">
-    </p>
+        We use flour, nuts and spices, although all care is taken, trace elements are unavoidable in all meals.</p>
+    
+    <!--Filter Icon-->
+    <img class="filter" src="assets/icons/filter.png" alt="Filter">
 
 
     <!--Entree-->
-    <section id="Entree">
+    <section class="Entree">
 
         <h2>Entree</h2>
         
         <figure>
-            <img id="productimage" data-category="seafood" src="Products/Image/Product_01.jpg" alt="Rock Oysters">
+            <img class="food-image" data-category="seafood" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
             <figcaption>
-                <h4>Oysters ( 8ea )</h4>
+                <p class="food-name">Oysters ( 8ea )<p>
                 <p>Tarama, squid ink, beach succulents</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="vegetarian" src="Images/Stone Baked Village Bread.jpg" alt="Stone Baked Village Bread">
+            <img class="food-image" data-category="vegetarian" src="assets/product_image/stone_baked_village_bread.jpg" alt="stone baked village bread">
             <figcaption>
-                <h4>Stone Baked Village Bread ( 12 )</h4>
+                <p class="food-name">Stone Baked Village Bread ( 12 )</p>
                 <p>Tarama, squid ink, beach succulents</p>
             </figcaption>
         </figure>
@@ -76,33 +76,33 @@
         <h2>Sides</h2>
 
         <figure>
-            <img id="productimage" data-category="seafood" src="Images/Tarak Scallop.jpg" alt="Tarak Scallop">
+            <img class="food-image" data-category="seafood" src="assets/product_image/tarak_scallop.jpg" alt="tarak scallop">
             <figcaption>
-                <h4>Tarak Scallop ( 25 )</h4>
+                <p class="food-name">Tarak Scallop ( 25 )</p>
                 <p>Baba ganoush and daikon</p>
             </figcaption>
         </figure>
 
         <figure>
-                <img id="productimage" data-category="vegetarian" src="Images/Smoked Beetroot Tartare.jpg" alt="Smoke Beetroot Tartare">
+                <img class="food-image" data-category="vegetarian" src="assets/product_image/smoked_beetroot_tartare.jpg" alt="smoke beetroot tartare">
                 <figcaption>
-                    <h4>Smoke Beetroot Tartare ( 18 )</h4>
+                    <p class="food-name">Smoke Beetroot Tartare ( 18 )</p>
                     <p>Labna, rhubard and blood plums</p>
                 </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="vegetarian" src="Images/Charred Cabbage.jpg" alt="Charred Cabbage">
+            <img class="food-image" data-category="vegetarian" src="assets/product_image/charred_cabbage.jpg" alt="charred cabbage">
             <figcaption>
-                <h4>Charred Cabbage ( 22 )</h4>
+                <p class="food-name">Charred Cabbage ( 22 )</p>
                 <p>Dill, feta, puffed rice, nigella</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="vegetarian" src="Images/Fried Potato.jpg" alt="Fried Potato">
+            <img class="food-image" data-category="vegetarian" src="assets/product_image/fried_potato.jpg" alt="fried potato">
             <figcaption>
-                <h4>Fried Potato ( 18 )</h4>
+                <p class="food-name"></p>Fried Potato ( 18 )</p>
                 <p>Fried potato with tartare sauce</p>
             </figcaption>
         </figure>
@@ -115,41 +115,41 @@
         <h2>Mains</h2>
 
         <figure>
-            <img id="productimage" data-category="seafood" src="Images/John Dory.jpeg" alt="John Dory">
+            <img class="food-image" data-category="seafood" src="assets/product_image/john_dory.jpeg" alt="john dory">
             <figcaption>
-                <h4>John Dory ( 45 )</h4>
+                <p class="food-name">John Dory ( 45 )</p>
                 <p>Confit garlic, parsley and citrus sauce</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="beef" src="Images/Hunkar Begendi.jpg" alt="Hunkar Begendi">
+            <img class="food-image" data-category="beef" src="assets/product_image/hunkar_begendi.jpg" alt="hunkar begendi">
             <figcaption>
-                <h4>Hunkar Begendi ( 58 )</h4>
+                <p class="food-name">Hunkar Begendi ( 58 )</p>
                 <p>Lamb loin, smoked eggplant puree, burnt butter</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" src="Images/1:2 Roasted Chicken.jpg" alt="1/2 Roasted Chicken">
+            <img class="food-image" src="assets/product_image/roasted_chicken.jpg" alt="1/2 roasted chicken">
             <figcaption>
-                <h4>1/2 Roasted Chicken ( 48 )</h4>
+                <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
                 <p>Pomegranate molasses, garlic toum, pickles</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="beef" src="Images/Yogurtlu Kebab.jpeg" alt="Yogurtlu Kebad">
+            <img class="food-image" data-category="beef" src="assets/product_image/yogurtlu_kebab.jpeg" alt="yogurtlu kebab">
             <figcaption>
-                <h4>Yogurtlu Kebab ( 86 )</h4>
+                <p class="food-name">Yogurtlu Kebab ( 86 )</p>
                 <p>Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
             </figcaption>
         </figure>
 
         <figure>
-            <img id="productimage" data-category="beef" src="Images/Manti.jpg" alt="Manti">
+            <img class="food-image" data-category="beef" src="assets/product_image/manti.jpg" alt="manti">
             <figcaption>
-                <h4>Manti ( 38 )</h4>
+                <p class="food-name">Manti ( 38 )</p>
                 <p>Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
             </figcaption>
         </figure>
@@ -162,17 +162,17 @@
             <h2>Dessert</h2>
 
             <figure>
-                <img id="productimage" data-category="vegetarian" src="Images/Charcoal Merengue.jpg" alt="Charcoal merengue">
+                <img class="food-image" data-category="vegetarian" src="assets/product_image/charcoal_merengue.jpg" alt="charcoal merengue">
                 <figcaption>
-                    <h4>Charcoal Merengue ( 20 )</h4>
+                    <p class="food-name">Charcoal Merengue ( 20 )</p>
                     <p>Fresh berries and mastika cream</p>
                 </figcaption>
             </figure>
 
             <figure>
-                <img id="productimage" data-category="vegetarian" src="Images/Cheesecake.jpg" alt="Cheesecake">
+                <img class="food-image" data-category="vegetarian" src="assets/product_image/cheesecake.jpg" alt="cheesecake">
                 <figcaption>
-                    <h4>Tilba Haloumi ( 8 )</h4>
+                    <p class="food-name">Tilba Haloumi ( 8 )</p>
                     <p>Local honey and Lavender oil</p>
                 </figcaption>
             </figure>
