--- a/confirmation.html
+++ b/confirmation.html
@@ -9,22 +9,16 @@
 </head>
 
 <body>
-    <h1>BOOKING
-        <br>
-        CONFIRMED!
-    </h1>
+    <h1>Booking Confirmed</h1>
+
     <!--function-->
-    <p1>Your booking for xxx at</p1>
-    <br>
-    <p2>12:00
-        <br>
-        Tuesday,10/04/2023
-    </p2>
-    <p3>A confirmation email has
-        <br>
-        been sent to you on
-    </p3>
+    <p>Your booking for xxx at</p>
+    
+    <p>12:00</p>
+    <p>Tuesday,10/04/2023</p>
+    <p>A confirmation email has been sent to you on</p>
+
     <p id="email"><!--function insided--></p>
-    <a href="Landing page.html"><img src="buttons/buttons-05.png" width="235" height="47" ></a>
+    <a href="index.html"><img src="assets/buttons/back_to_anason_white.png"></a>
 </body>
 </html>
