26th may - 11.40pm

--- a/drinks.html
+++ b/drinks.html
@@ -42,7 +42,7 @@
     <h1>Drinks Menu</h1>
 
     <!--Sparking-->
-    <section class="type">
+    <section class="drinks">
         <h2>Sparkling</h2>
 
         <dl>
@@ -67,7 +67,7 @@
 
 
     <!--White Wine-->
-    <section class="type">
+    <section class="drinks">
         <h2>White</h2>
 
         <dl>
@@ -92,7 +92,7 @@
 
 
     <!--Cocktails-->
-    <section class="type">
+    <section class="drinks">
         <h2>Cocktails</h2>
 
         <dl>
@@ -134,7 +134,7 @@
 
 
     <!--Soft Drinks-->
-    <section class="type">
+    <section class="drinks">
         <h2>Soft Drinks ( 6 )</h2>
 
         <dl>
