--- a/search.html
+++ b/search.html
@@ -36,26 +36,45 @@
 
 <body>
     <p class="subhead">Search</p>
-    <h1>Search: <input type="text" class="txt"></h1> 
+
+    <h1>Search: <input type="text" class="search"></h1> 
+    
     <hr>
-    <!--result images and description-->
-    <section id="Recommend">
-            <figure>
-                <img src="Products/Image/Product_01.jpg" alt="Rock Oyster" width="293" height="293">
-                <figcaption>Rock Oysters ( 8ea )</figcaption>
-            </figure>
-            <figure>
-                <img src="Images/Smoked Beetroot Tartare.jpg" alt="Smoked Beetroot Tartare" width="293" height="293">
-                <figcaption>Smoked Beetroot Tartare ( 18 )</figcaption>
-            </figure>
-            <figure>
-                <img src="Images/Charcoal Merengue.jpg" alt="Charcoal Merengue" width="293" height="293">
-                <figcaption>Charcoal Merengue ( 20 )</figcaption>
-            </figure>
-            <figure>
-                <img src="Images/Hunkar Begendi.jpg" alt="Hunkar Begendi" width="293" height="293">
-                <figcaption>Hunkar Begendi ( 58 )</figcaption>
-            </figure>
+
+    <!--Recommendation-->
+    <section id="results-recommendations">
+
+        <figure>
+            <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
+            <figcaption>
+                <p class="food-name">Manti ( 38 )</p>
+                <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img class="food-image" src="assets/landing/recommend_02.jpg" alt="1/2 roasted chicken">
+            <figcaption>
+                <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
+                <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img class="food-image" src="assets/landing/recommend_03.jpg" alt="hunkar begendi">
+            <figcaption>
+                <p class="food-name">Hunkar Begendi ( 58 )</p>
+                <p class="food-description">Lamb loin, smoked eggplant puree, burnt butter</p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img class="food-image" src="assets/landing/recommend_04.jpg" alt="yogurtlu kebab">
+            <figcaption>
+                <p class="food-name">Yogurtlu Kebab ( 86 )</p>
+                <p class="food-description">Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
+            </figcaption>
+        </figure>
     </section>
 
 <!--Footer-->
