--- a/product.html
+++ b/product.html
@@ -35,19 +35,23 @@
 </header>
 
 <body>
-    <p class="subhead">
-        Search &nbsp; <img src="icons/icons_navigation arrow.png" width="4" height="8"> &nbsp; PRODUCT    </p>
+    <p class="subhead">SEARCH<img class="subhead-arrow" src="assets/icons/navigation arrow.png" alt="arrow">PRODUCT</p>
+
     <p id="return">
         <a href="Food page.html"><img src="icons/icons_back_black.png" width="16" height="32"></a>
     </p>
     <!--go back to the previous page using js function-->
+
     <h1>ROCK OYSTERS</h1>
+
     <section id="product">
-        <figure>
-            <img src="Images/Rock Oysters.jpg" alt="Rock Oysters" width="603" height="603">
-            <img src="Images/Rock Oysters 2.jpg" alt="Rock Oysters 2" width="603" height="603">
+        <figure class="product-image">
+            <img src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
+            <img src="assets/product_image/rock_oysters_02.jpg" alt="rock oysters">
         </figure>
-        <p1>Tarama, squid ink cracker, beach succulents</p1>
+
+        <p>Tarama, squid ink cracker, beach succulents</p>
+        
         <p2>Calories Protein Carbohydate</p2>
         <br>
         <p1>52 2g 5g</p1>
