--- a/food.html
+++ b/food.html
@@ -48,25 +48,29 @@
 
 
     <!--Entree-->
-    <section class="Entree">
+    <section id="Entree">
 
         <h2>Entree</h2>
         
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="go-to-product">
             <img class="food-image" data-category="seafood" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
             <figcaption>
                 <p class="food-name">Oysters ( 8ea )<p>
                 <p>Tarama, squid ink, beach succulents</p>
             </figcaption>
         </figure>
+    </a>
 
-        <figure>
+    <a href="product.html" class="figure-link">
+            <figure class="go-to-product">
             <img class="food-image" data-category="vegetarian" src="assets/product_image/stone_baked_village_bread.jpg" alt="stone baked village bread">
             <figcaption>
                 <p class="food-name">Stone Baked Village Bread ( 12 )</p>
                 <p>Tarama, squid ink, beach succulents</p>
             </figcaption>
         </figure>
+    </a>
     </section>
 
 
@@ -75,84 +79,104 @@
 
         <h2>Sides</h2>
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="seafood" src="assets/product_image/tarak_scallop.jpg" alt="tarak scallop">
             <figcaption>
                 <p class="food-name">Tarak Scallop ( 25 )</p>
                 <p>Baba ganoush and daikon</p>
             </figcaption>
         </figure>
+    </a>    
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
                 <img class="food-image" data-category="vegetarian" src="assets/product_image/smoked_beetroot_tartare.jpg" alt="smoke beetroot tartare">
                 <figcaption>
                     <p class="food-name">Smoke Beetroot Tartare ( 18 )</p>
                     <p>Labna, rhubard and blood plums</p>
                 </figcaption>
         </figure>
+    </a>    
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="vegetarian" src="assets/product_image/charred_cabbage.jpg" alt="charred cabbage">
             <figcaption>
                 <p class="food-name">Charred Cabbage ( 22 )</p>
                 <p>Dill, feta, puffed rice, nigella</p>
             </figcaption>
         </figure>
+    </a>   
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="vegetarian" src="assets/product_image/fried_potato.jpg" alt="fried potato">
             <figcaption>
-                <p class="food-name"></p>Fried Potato ( 18 )</p>
+                <p class="food-name">Fried Potato ( 18 )</p>
                 <p>Fried potato with tartare sauce</p>
             </figcaption>
         </figure>
-    </section>
+    </a>   
+    </section>  
 
 
     <!--Mains-->
     <section id="mains">
 
-        <h2>Mains</h2>
+    <h2>Mains</h2>
 
-        <figure>
+
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="seafood" src="assets/product_image/john_dory.jpeg" alt="john dory">
             <figcaption>
                 <p class="food-name">John Dory ( 45 )</p>
                 <p>Confit garlic, parsley and citrus sauce</p>
             </figcaption>
         </figure>
+    </a>
 
-        <figure>
+
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="beef" src="assets/product_image/hunkar_begendi.jpg" alt="hunkar begendi">
             <figcaption>
                 <p class="food-name">Hunkar Begendi ( 58 )</p>
                 <p>Lamb loin, smoked eggplant puree, burnt butter</p>
             </figcaption>
         </figure>
+    </a>   
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" src="assets/product_image/roasted_chicken.jpg" alt="1/2 roasted chicken">
             <figcaption>
                 <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
                 <p>Pomegranate molasses, garlic toum, pickles</p>
             </figcaption>
         </figure>
+    </a>   
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="beef" src="assets/product_image/yogurtlu_kebab.jpeg" alt="yogurtlu kebab">
             <figcaption>
                 <p class="food-name">Yogurtlu Kebab ( 86 )</p>
                 <p>Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
             </figcaption>
         </figure>
+    </a>   
 
-        <figure>
+    <a href="product.html" class="figure-link">
+        <figure class="food-group">
             <img class="food-image" data-category="beef" src="assets/product_image/manti.jpg" alt="manti">
             <figcaption>
                 <p class="food-name">Manti ( 38 )</p>
                 <p>Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
             </figcaption>
         </figure>
+    </a>   
     </section>
 
 
@@ -161,21 +185,26 @@
 
             <h2>Dessert</h2>
 
-            <figure>
+
+        <a href="product.html" class="figure-link">
+            <figure class="food-group">
                 <img class="food-image" data-category="vegetarian" src="assets/product_image/charcoal_merengue.jpg" alt="charcoal merengue">
                 <figcaption>
                     <p class="food-name">Charcoal Merengue ( 20 )</p>
                     <p>Fresh berries and mastika cream</p>
                 </figcaption>
             </figure>
+        </a>   
 
-            <figure>
+        <a href="product.html" class="figure-link">
+            <figure class="food-group">
                 <img class="food-image" data-category="vegetarian" src="assets/product_image/cheesecake.jpg" alt="cheesecake">
                 <figcaption>
                     <p class="food-name">Tilba Haloumi ( 8 )</p>
                     <p>Local honey and Lavender oil</p>
                 </figcaption>
             </figure>
+        </a>   
     </section> 
 </body>
 
