27th may - 10.22pm

--- a/confirmation.html
+++ b/confirmation.html
@@ -19,6 +19,6 @@
     <p>A confirmation email has been sent to you on</p>
 
     <p id="email"><!--function insided--></p>
-    <a href="index.html"><img src="assets/buttons/back_to_anason_white.png"></a>
+    <a href="index.html"><img class="bta-button" src="assets/buttons/back_to_anason_white.png"></a>
 </body>
 </html>
