27th may - 10:30pm

--- a/food.html
+++ b/food.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <p class="subhead">MENU</p>
+<p class="subhead">MENU</p>
 
     <h1>Food Menu</h1>
 
@@ -47,8 +47,8 @@
     <img class="filter" src="assets/icons/filter.png" alt="Filter">
 
 
-    <!--Entree-->
-    <section id="Entree">
+<!--Entree-->
+<section id="Entree">
 
         <h2>Entree</h2>
         
@@ -74,8 +74,8 @@
     </section>
 
 
-    <!--Sides-->
-    <section id="sides">
+<!--Sides-->
+<section id="sides">
 
         <h2>Sides</h2>
 
@@ -121,11 +121,10 @@
     </section>  
 
 
-    <!--Mains-->
-    <section id="mains">
+<!--Mains-->
+<section id="mains">
 
     <h2>Mains</h2>
-
 
     <a href="product.html" class="figure-link">
         <figure class="food-group">
@@ -180,11 +179,10 @@
     </section>
 
 
-    <!--Dessert-->
-    <section id="dessert">
+<!--Dessert-->
+<section id="dessert">
 
-            <h2>Dessert</h2>
-
+        <h2>Dessert</h2>
 
         <a href="product.html" class="figure-link">
             <figure class="food-group">
@@ -210,7 +208,7 @@
 
 
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
