--- a/result.html
+++ b/result.html
@@ -34,6 +34,7 @@
     </nav>
 </header>
 
+
 <body>
     <p class="subhead">
         Search &nbsp; <img src="icons/icons_navigation arrow.png" width="4" height="8"> &nbsp; "OYSTERS"    </p>
@@ -41,7 +42,8 @@
         <a href="Search page.html"><img src="icons/icons_back_black.png" width="16" height="32"></a>
     </p>
     <!--this should be a function-->
-    <h2>"Oysters"</h2>
+
+<h2>"Oysters"</h2>
     <section id="search result">
             <figure>
                 <img src="Products/Image/Product_01.jpg" alt="Rock Oyster" width="293" height="293">
@@ -55,7 +57,7 @@
 
 
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
