--- a/search.html
+++ b/search.html
@@ -34,6 +34,7 @@
     </nav>
 </header>
 
+
 <body>
     <p class="subhead">Search</p>
 
@@ -41,8 +42,8 @@
     
     <hr>
 
-    <!--Recommendation-->
-    <section id="results-recommendations">
+<!--Recommendation-->
+<section id="results-recommendations">
 
         <figure>
             <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
@@ -77,8 +78,9 @@
         </figure>
     </section>
 
+    
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
