--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
 <body>
     <!--sub-navigation bar-->
-    <p class="subhead">ABOUT</p>
+    <p id="subhead">ABOUT</p>
 
     <h1>About Us</h1>
 
@@ -51,7 +51,7 @@
 
 
     <!--Our Story-->
-    <div class="about-our-story">
+    <div id="about-our-story">
         <h2>Our Story</h2>
 
         <p>Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
@@ -64,7 +64,7 @@
 
 
     <!--Our Food-->
-    <div class="about-our-food">
+    <div id="about-our-food">
         <h2>Our Food</h2>
 
         <P>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
@@ -73,14 +73,14 @@
 
 
     <!--Reserve Now Button-->
-    <div class="about-button">
+    <div id="about-reserve-button">
         <a class="reserve-button" href="reserve.html"><img src="assets/buttons/reserve_now_blue.png"></a>
     </div>
 </body>
 
 
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
