--- a/filtered.html
+++ b/filtered.html
@@ -56,7 +56,7 @@
 
 
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
