--- a/reserve.html
+++ b/reserve.html
@@ -40,7 +40,7 @@
 
 
 <!--Footer-->
-<footer class="footer">
+<footer id="footer">
 
     <!--Social Media Icons-->
     <div class="footer-socials-icons">
