27th may 10.58pm

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Anason</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
+    <style>
+        body {
+            background-color: pink;
+        }
+    </style>
 </head>
 
 
@@ -24,13 +29,13 @@
         </div>
 
         <!--brand logo-->
-        <div class="white-brandlogo">
-            <a href="index.html"><img src="assets/icons/anason_white.png" alt="brand logo"></a>
+        <div class="nav-logo">
+            <a href="index.html"><img class="white-brandlogo" src="assets/icons/anason_white.png" alt="brand logo"></a>
         </div>
 
         <!--search icon-->
-        <div class="white-searchicon">
-            <a href="search.html"><img src="assets/icons/search_icon_white.png" alt="search icon"></a>
+        <div class="nav-search">
+            <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="search icon"></a>
         </div>
     </nav>
 </header>
