28th may 12.01am

--- a/food.html
+++ b/food.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Menu</title>
+    <title>Anason</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/button.css">
+    <link rel="stylesheet" type="text/css" href="css/image.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
 
 
@@ -15,21 +18,21 @@
     <nav class="navbar">
 
         <!--pages-->
-        <div>
-            <a class="nav-pages" href="food.html">Food</a>
-            <a class="nav-pages" href="drinks.html">Drinks</a>
-            <a class="nav-pages" href="reserve.html">Reserve</a>
-            <a class="nav-pages" href="about.html">About</a>
-        </div>
+        <ul class="dark-bg">
+            <li><a class="nav-pages" href="food.html">Food</a></li>
+            <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
+            <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
+            <li><a class="nav-pages" href="about.html">About</a></li>
+        </ul>
 
         <!--brand logo-->
-        <div class="white-brandlogo">
-            <a href="index.html"><img src="assets/icons/anason_white.png" alt="brand logo"></a>
+        <div class="nav-logo">
+            <a href="index.html"><img class="white-brandlogo" src="assets/icons/anason_white.png" alt="brand logo"></a>
         </div>
 
         <!--search icon-->
-        <div class="white-searchicon">
-            <a href="search.html"><img src="assets/icons/search_icon_white.png" alt="search icon"></a>
+        <div class="nav-search">
+            <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="search icon"></a>
         </div>
     </nav>
 </header>
