--- a/reserve.html
+++ b/reserve.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservations</title>
+    <title>Anason</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="css/button.css">
+    <link rel="stylesheet" type="text/css" href="css/image.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">
 </head>
+
+
+<header class="grid">
+
+    <!--navigation bar-->
+    <nav class="navbar">
+
+        <!--pages-->
+        <ul class="dark-bg">
+            <li><a class="nav-pages" href="food.html">Food</a></li>
+            <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
+            <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
+            <li><a class="nav-pages" href="about.html">About</a></li>
+        </ul>
+
+        <!--brand logo-->
+        <div class="nav-logo">
+            <a href="index.html"><img class="white-brandlogo" src="assets/icons/anason_white.png" alt="brand logo"></a>
+        </div>
+
+        <!--search icon-->
+        <div class="nav-search">
+            <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="search icon"></a>
+        </div>
+    </nav>
+</header>
 
 
 <header class="grid">
