28th may 12.04am

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="landing-header" class="dark-bg">
         <h2>Elevate Your Palate With Authentic Turkish Flavours</h2>
         
-        <img class="landing-head-image" src="assets/other_images/landing-head-image.jpg">
+        <img class="landing-head-image" src="assets/landing/cover.jpg">
 
         <a href="reserve.html"><img class="reserve-button" src="assets/buttons/reserve_now_blue.png"></a>
     </section>
