28th may 12.10am

--- a/product.html
+++ b/product.html
@@ -94,11 +94,11 @@
 <footer id="footer">
 
     <!--Social Media Icons-->
-    <div class="footer-socials-icons">
+    <div>
         <h3>Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/instagram.png" alt="instagram"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/instagram.png" alt="instagram"></a>
     </div>
 
     <!--Directory-->
