--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
     <!--Reserve Now Button-->
     <div id="about-reserve-button">
-        <a class="reserve-button" href="reserve.html"><img src="assets/buttons/reserve_now_blue.png"></a>
+        <a href="reserve.html"><img class="reserve-button" src="assets/buttons/reserve_now_blue.png"></a>
     </div>
 </body>
 
@@ -86,11 +86,11 @@
 <footer id="footer">
 
     <!--Social Media Icons-->
-    <div class="footer-socials-icons">
+    <div>
         <h3>Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img src="assets/icons/instagram.png" alt="instagram"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/instagram.png" alt="instagram"></a>
     </div>
 
     <!--Directory-->
