--- a/product.html
+++ b/product.html
@@ -48,17 +48,26 @@
 <h1>ROCK OYSTERS</h1>
 
 <section id="product">
-        <figure class="product-image">
-            <img src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
-            <img src="assets/product_image/rock_oysters_02.jpg" alt="rock oysters">
+        <figure>
+            <img class="product-image" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
+            <img class="product-image" src="assets/product_image/rock_oysters_02.jpg" alt="rock oysters">
         </figure>
 
         <p>Tarama, squid ink cracker, beach succulents</p>
         
-        <p2>Calories Protein Carbohydate</p2>
-        <br>
-        <p1>52 2g 5g</p1>
-    </section>
+        <table>
+            <tr>
+                <th>Calories</th>
+                <th>Protein</th>
+                <th>Carbohydrate</th>
+            </tr>
+            <tr>
+                <td>52 kcal</td>
+                <td>2g</td>
+                <td>5g</td>
+            </tr>
+        </table>
+</section>
 
 <section id="drinks pairing">
     
