28th may - 2.49am

--- a/food.html
+++ b/food.html
@@ -215,7 +215,7 @@
 
     <!--Social Media Icons-->
     <div>
-        <h3>Social Media</h3> 
+        <h3 class="footer-header">Social Media</h3> 
         <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/facebook.png" alt="facebook"></a>
         <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/twitter.png" alt="twitter"></a>
         <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/instagram.png" alt="instagram"></a>
@@ -223,7 +223,7 @@
 
     <!--Directory-->
     <div>
-        <h3>Get To Us</h3>
+        <h3 class="footer-header">Get To Us</h3>
             <div>
                 <p class="footer-gtu-name">Contact</p>
                 <p class="footer-gtu-description">+02 9188 1581</p>
@@ -243,6 +243,10 @@
                 <p class="footer-gtu-name">Opening Hours</p>
                 <p class="footer-gtu-description">Till 12pm Everyday</p>
             </div>
+    </div>
+
+    <div>
+        <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
     </div>
 </footer>
 </html>
