28th may - 10.33pm

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         
         <img class="landing-head-image" src="assets/landing/cover.jpg">
 
+        <div class="button blue-button">Reserve Now</div>
         <a href="reserve.html"><img class="reserve-button" src="assets/buttons/reserve_now_blue.png"></a>
     </section>
 
