29th may - 1.07am

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
+    
 </head>
 
 
@@ -18,7 +19,7 @@
     <nav class="navbar">
 
         <!--pages-->
-        <ul class="dark-bg">
+        <ul class="navbar">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
@@ -46,7 +47,6 @@
         
         <img class="landing-head-image" src="assets/landing/cover.jpg">
 
-        <div class="button blue-button">Reserve Now</div>
         <a href="reserve.html"><img class="reserve-button" src="assets/buttons/reserve_now_blue.png"></a>
     </section>
 
@@ -165,6 +165,9 @@
             <a href=""><img class="social-media-image" src="assets/landing/socials_04.jpg" alt="social media image"></a>
         </figure>
 
+        <div class="button blue-button figure-link">
+            <a href="https://www.instagram.com/anasonmezebar/?hl=en">Instagram</a>
+        </div>
         <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="instagram-button" src="assets/buttons/instagram_blue.png"></a>
 
     </section>
