--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/image.css">
-    <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/layout.css">  
 </head>
 
 
@@ -18,7 +18,7 @@
     <nav class="navbar">
 
         <!--pages-->
-        <ul class="dark-bg">
+        <ul class="navbar">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
@@ -36,6 +36,7 @@
         </div>
     </nav>
 </header>
+
 
 <body>
     <p class="subhead">SEARCH<img class="subhead-arrow" src="assets/icons/navigation arrow.png" alt="arrow">PRODUCT</p>
