--- a/reserve.html
+++ b/reserve.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
 
         <!--pages-->
-        <ul class="dark-bg">
+        <ul class="navbar">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
