29th may - 1.58am

--- a/result.html
+++ b/result.html
@@ -48,7 +48,7 @@
 
 <h2>"Oysters"</h2>
 
-<section class="results"
+<section class="results">
     <a href="product.html" class="figure-link">
         <figure class="go-to-product">
             <img class="food-image" data-category="seafood" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
@@ -58,6 +58,8 @@
             </figcaption>
         </figure>
     </a>
+</section>
+
 </body>
 
 
